--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-6 bg-black">
                     <div>
-                        <h3 class="sub-heading">Experience</h3>
+                        <h3 class="sub-heading sub-heading-2">Experience</h3>
 
                         <ul>
                             <h4>Free lancer</h4>
@@ -62,7 +62,7 @@
                     </div>
                    
                     <div>
-                        <h3 class="sub-heading">Education</h3>
+                        <h3 class="sub-heading sub-heading-2">Education</h3>
                         <p>2021-2025</p>
                         <p><em>Bachelors In Computer Science</em></p>
                         <p><em>Comsats University</em></p>
@@ -72,7 +72,7 @@
                         <p><em>Sir Syed College</em></p>
                     </div>
                     <div class="lang-sec">
-                        <h3 class="sub-heading">Skills</h3>
+                        <h3 class="sub-heading sub-heading-2">Skills</h3>
                         <ul>
                             <li>
                                 <label for="file">App Development In Flutter</label>
