--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -1,12 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Mariam Ali's CV</title>
 </head>
-
 <body>
     <section class="my-cv">
         <div class="cv-container">
@@ -22,70 +21,53 @@
                             leverage my technical expertise and contribute to cutting-edge projects in a dynamic work
                             environment.</p>
                     </div>
-                    <div class="lang-sec">
-                        <h3 class="sub-heading">Language</h3>
-                        <ul>
-                            <li>
-                                <label for="file"><b>English:</b></label>
-                                <progress id="file" value="70" max="100"> 70% </progress>
-                            </li><br><br>
-                            <li>
-                                <label for="file"><b>Urdu:</b></label>
-                                <progress id="file2" value="80" max="100"> 80% </progress>
-                            </li>
-
-                        </ul>
-                    </div>
-                    <div class="contact-info">
-                        <h3 class="sub-heading">Contact</h3>
-                        <ul id="phone">
-                            <li><img src="images/download.png" alt=""><span>+92 3030826878</span></li><br><br>
-                            <li><img src="images/download.jfif" alt=""><span>chmishi800@gmail.com</span></li><br><br>
-                            <li><img src="images/images.png" alt=""><span>Lahore, Johar Town</span></li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="col-6 bg-black">
                     <div>
                         <h3 class="sub-heading sub-heading-2">Experience</h3>
-
                         <ul>
                             <h4>Free lancer</h4>
                             <li>As a dedicated freelance mobile app developer, I have successfully undertaken and
                                 delivered diverse projects, showcasing my proficiency in creating innovative and
                                 user-centric applications. My expertise lies in utilizing a variety of programming
                                 languages, with a primary focus on Java, C, and Python.
-
                             </li>
-                           
                         </ul>
                     </div>
-                   
                     <div>
                         <h3 class="sub-heading sub-heading-2">Education</h3>
-                        <p>2021-2025</p>
-                        <p><em>Bachelors In Computer Science</em></p>
-                        <p><em>Comsats University</em></p>
-                        <br>
-                        <p>2017-2019</p>
-                        <p><em>Intermediate In Computer Science</em></p>
-                        <p><em>Sir Syed College</em></p>
+                        <p>2021-2025 | <em>Bachelors In Computer Science</em> | <em>Comsats University</em></p>
+                        <p>2017-2019 | <em>Intermediate In Computer Science</em> | <em>Sir Syed College</em></p>
                     </div>
                     <div class="lang-sec">
                         <h3 class="sub-heading sub-heading-2">Skills</h3>
                         <ul>
                             <li>
-                                <label for="file">App Development In Flutter</label>
-                                <progress id="file" value="80" max="100"> 32% </progress>
-                            </li><br><br>
-                            <li>
-                                <label for="file">Programming Languages</label>
-                                <progress id="file2" value="75" max="100"> 32% </progress>
-                            </li><br><br>
-                            <li>
-                                <label for="file">HTML, CSS</label>
-                                <progress id="file3" value="80" max="100"> 32% </progress>
+                                <label>App Development In Flutter</label>
+                                <div class="progress-container">
+                                    <div class="progress-bar progress-bar-3"></div>
+                                </div>
                             </li>
+                            <li>
+                                <label>Programming Languages</label>
+                                <div class="progress-container">
+                                    <div class="progress-bar progress-bar-4"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <label>HTML, CSS, Bootstrap, Javascript</label>
+                                <div class="progress-container">
+                                    <div class="progress-bar progress-bar-5"></div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="contact-info">
+                        <h3 class="sub-heading sub-heading-2">Contact</h3>
+                        <ul id="phone">
+                            <li><img src="images/download.png" alt=""><span>+92 3030826878</span></li>
+                            <li><img src="images/download.jfif" alt=""><span>chmishi800@gmail.com</span></li>
+                            <li><img src="images/images.png" alt=""><span>Lahore, Johar Town</span></li>
                         </ul>
                     </div>
                 </div>
@@ -93,5 +75,4 @@
         </div>
     </section>
 </body>
-
 </html>
