--- a/Assignment one cv/index.html
+++ b/Assignment one cv/index.html
@@ -21,6 +21,24 @@
                             leverage my technical expertise and contribute to cutting-edge projects in a dynamic work
                             environment.</p>
                     </div>
+                    <div class="lang-sec">
+                        <h3 class="sub-heading ">Languages</h3>
+                        <ul>
+                            <li>
+                                <label>Urdu</label>
+                                <div class="progress-container">
+                                    <div class="progress-bar progress-bar-2"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <label>English</label>
+                                <div class="progress-container">
+                                    <div class="progress-bar "></div>
+                                </div>
+                            </li>
+                           
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-6 bg-black">
                     <div>
