--- a/Assignment one cv/index.html
+++ b/Assignment one cv/index.html
@@ -26,15 +26,11 @@
                         <ul>
                             <li>
                                 <label>Urdu</label>
-                                <div class="progress-container">
-                                    <div class="progress-bar progress-bar-2"></div>
-                                </div>
+                                <progress  value="82" max="100"> 82% </progress>
                             </li>
                             <li>
                                 <label>English</label>
-                                <div class="progress-container">
-                                    <div class="progress-bar "></div>
-                                </div>
+                                <progress value="72" max="100"> 72% </progress>
                             </li>
                            
                         </ul>
@@ -62,21 +58,15 @@
                         <ul>
                             <li>
                                 <label>App Development In Flutter</label>
-                                <div class="progress-container">
-                                    <div class="progress-bar progress-bar-3"></div>
-                                </div>
+                                <progress value="70" max="100" > 70% </progress>
                             </li>
                             <li>
                                 <label>Programming Languages</label>
-                                <div class="progress-container">
-                                    <div class="progress-bar progress-bar-4"></div>
-                                </div>
+                                <progress value="80" max="100" > 80% </progress>
                             </li>
                             <li>
                                 <label>HTML, CSS, Bootstrap, Javascript</label>
-                                <div class="progress-container">
-                                    <div class="progress-bar progress-bar-5"></div>
-                                </div>
+                                <progress value="75" max="100" > 75% </progress>
                             </li>
                         </ul>
                     </div>
