--- a/Lab Assignment 1/index.html
+++ b/Lab Assignment 1/index.html
@@ -24,8 +24,8 @@
                 <input class="form-control" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn " type="submit"><img src="images/Untitled-1.svg"></button>
             </form>
-            <a class="nav-item mx-auto text-light margin-set" href="#">Sign Up</a>
-            <a class="nav-item  text-light border1" href="#"><img class="login" src="images/Untitled-2.svg">Log In</a>
+            <a class="nav-item mx-auto text-light margin-set" href="contactUs.html">Contact Us</a>
+            <a class="nav-item  text-light border1" href="crud.html"><img class="login" src="images/Untitled-2.svg">Log In</a>
            
         </div>
     </nav>
